--- a/one-data-source/src/main/resources/application.yml
+++ b/one-data-source/src/main/resources/application.yml
@@ -7,12 +7,10 @@ spring:
       username: root
       password: feng1104
       initial-size: 1
-      min-idle: 1
-      max-active: 20
-      max-wait: 60000
       validation-query: SELECT 1
 logging:
   level:
     root: DEBUG
+  config:
 mybatis:
   mapper-locations: classpath:mappers/*.xml
